objects/vlocity_ins__Application__c.object
<CustomObject>
    <description>An instance of an application submitted by a customer, agent/broker or a provider. For example, an application may be submitted by a customer to apply for individual insurance. An application may be submitted by an agent/broker to start the appointment process. An application may be submitted by a provider to become an in-network provider for one or more networks. The Application object is used to track the party&apos;s request through the approval process.</description>
    <fields>
        <fullName>AccountLegalName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Account Legal Name)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>text(	AccountLegalName__r.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Association Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Association Name)</relationshipLabel>
        <relationshipName>Applications8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>vlocity_ins__OpportunityId__r.CloseDate</formula>
        <inlineHelpText>Matches &apos;Opportunity Effective Date&apos; On The Related Opportunity.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number 2</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Applications (Group Number 2)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Formula__c</fullName>
        <formula>vlocity_ins__OpportunityId__c</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationReferenceNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Template</label>
        <referenceTo>vlocity_ins__ApplicationTemplate__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilesMap__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Files Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FullJSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity OmniScript</label>
        <referenceTo>vlocity_ins__OmniScript__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptLanguage__c</fullName>
        <formula>TEXT(vlocity_ins__OmniScriptId__r.vlocity_ins__Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScriptLanguage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OwnerLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OwnerId ,    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName  , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryApplicantLink__c</fullName>
        <description>This is used for drill down.</description>
        <formula>IF( ISBLANK( vlocity_ins__PrimaryPartyId__r.vlocity_ins__AccountId__r.Id ), HYPERLINK(&quot;/&quot; &amp;  vlocity_ins__PrimaryPartyId__r.vlocity_ins__ContactId__r.Id ,  vlocity_ins__PrimaryPartyId__r.Name   , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PrimaryPartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PrimaryPartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product for which the prospect or customer is applying.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ScreeningResult__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Manual Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Summary__c</fullName>
        <description>Summary of the reason for screening failure.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Individual Health</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplemental</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Part D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__ApplicationReferenceNumber__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>vlocity_ins__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>CA</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State CA</description>
        <label>CA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CO</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State CO</description>
        <label>CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>CT</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State CT</description>
        <label>CT</label>
    </recordTypes>
    <recordTypes>
        <fullName>GA</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State GA</description>
        <label>GA</label>
    </recordTypes>
    <recordTypes>
        <fullName>IN</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State IN</description>
        <label>IN</label>
    </recordTypes>
    <recordTypes>
        <fullName>KY</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State KY</description>
        <label>KY</label>
    </recordTypes>
    <recordTypes>
        <fullName>ME</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State ME</description>
        <label>ME</label>
    </recordTypes>
    <recordTypes>
        <fullName>MO</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State MO</description>
        <label>MO</label>
    </recordTypes>
    <recordTypes>
        <fullName>NH</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State NH</description>
        <label>NH</label>
    </recordTypes>
    <recordTypes>
        <fullName>NV</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State NV</description>
        <label>NV</label>
    </recordTypes>
    <recordTypes>
        <fullName>NY</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State NY</description>
        <label>NY</label>
    </recordTypes>
    <recordTypes>
        <fullName>OH</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State OH</description>
        <label>OH</label>
    </recordTypes>
    <recordTypes>
        <fullName>VA</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State VA</description>
        <label>VA</label>
    </recordTypes>
    <recordTypes>
        <fullName>WI</fullName>
        <active>true</active>
        <description>This record type is for Applications having Situs State WI</description>
        <label>WI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>